chapter_15/05-payroll-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payroll-policy
  namespace: payroll
spec:
  podSelector: {}
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: hr
      ports:
      - protocol: TCP
        port: 8080
    - ports:
      - protocol: UDP
        port: 53
